--- a/frontend/front-for-calc/index.html
+++ b/frontend/front-for-calc/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/src/img/i.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Accounting calculate</title>
+    <title>ИП Жуков</title>
   </head>
   <body>
     <div id="root"></div>
